--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,22 @@
 		</developer>
 	</developers>
 
+    <properties>
+        <io.dropwizard.version>0.7.0-rc1</io.dropwizard.version>
+    </properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>io.dropwizard</groupId>
 			<artifactId>dropwizard-core</artifactId>
-			<version>0.7.0-rc1</version>
+			<version>${io.dropwizard.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-testing</artifactId>
+            <version>${io.dropwizard.version}</version>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>com.google.inject.extensions</groupId>
 			<artifactId>guice-servlet</artifactId>
@@ -73,6 +83,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+        <dependency>
+            <groupId>com.jayway.restassured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>2.3.2</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
     <build>
