--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     </developers>
 
     <properties>
-        <io.dropwizard.version>0.8.0-rc2</io.dropwizard.version>
+        <io.dropwizard.version>0.8.0-rc2-SNAPSHOT</io.dropwizard.version>
     </properties>
     <dependencies>
         <dependency>
